--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "electronics_store"}]
 python = "^3.11"
 requests = "^2.28.2"
 pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
 
 
 [build-system]
